--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -16,7 +16,7 @@
 
 <div class="container">
     <h1>Search here</h1>
-    <form method="post">
+    <form action="/search/details">
         <div class="row">
             <div class="col">
                 <input type="text" name="surname" class="form-control" placeholder="Surname">
