--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -16,7 +16,7 @@
 
 <div class="container">
     <h1>Details</h1>
-    <span th:text="${selectedTickets.id + ' ' + selectedTickets.surname}" />
+    <span th:text="${selectedOwner.id + ' ' + selectedOwner.surname}" />
 </div>
 </body>
 </html>
