--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -16,8 +16,8 @@
 
 <div class="container">
     <h1>Tickets is here!</h1>
-    <span th:if="${tickets.size() == 0}">Tickets List is empty</span>
-    <table th:if="${tickets.size() > 0}" class="table table-hover">
+    <span th:if="${owner.size() == 0}">Tickets List is empty</span>
+    <table th:if="${owner.size() > 0}" class="table table-hover">
         <thead class="thead-dark">
         <tr>
             <td><b>ID</b></td>
@@ -29,7 +29,7 @@
         </thead>
         <tbody>
         <tr th:each="ticket : ${tickets}">
-            <td th:text="${ticket.id}"/>
+            <td th:text="${owner.id}"/>
             <td th:text="${ticket.surname}"/>
         </tr>
         </tbody>
