--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -12,7 +12,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </head>
 
-<body>
+<!--<body>-->
 
 <!--<div class="container">-->
 <!--    <h1>Tickets is here!</h1>-->
@@ -35,5 +35,5 @@
 <!--        </tbody>-->
 <!--    </table>-->
 <!--</div>-->
-</body>
+<!--</body>-->
 </html>
