--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8"/>
 
-    <title>Application</title>
+    <title>Details</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -15,7 +15,7 @@
 <body>
 
 <div class="container">
-    <div th:replace="~{navigation :: navigation(Home)}" />
+    <div th:replace="~{navigation :: navigation(Search)}" />
     <h1>Tickets check...</h1>
     <span th:if="${allTicketsByLastname.size() == 0}">You have no tickets!</span>
     <table th:if="${allTicketsByLastname.size() > 0}" class="table table-hover">
