--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -20,6 +20,9 @@
                 <li class="nav-item" th:classappend="${activeTab == 'Search' ? 'active' : ''}">
                     <a class="nav-link" th:href="@{/search}">Search</a>
                 </li>
+                <li class="nav-item" th:classappend="${activeTab == 'Top Five' ? 'active' : ''}">
+                    <a class="nav-link" th:href="@{/topFive}">Top Five</a>
+                </li>
             </ul>
         </div>
     </nav>
