--- a/src/main/resources/templates/topFive.html
+++ b/src/main/resources/templates/topFive.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8"/>
 
-    <title>Tickets</title>
+    <title>Top five tickets</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -15,24 +15,22 @@
 <body>
 
 <div class="container">
-    <div th:replace="~{navigation :: navigation(Search)}" />
-    <h1>Tickets is here!</h1>
-    <span th:if="${catalog.size() == 0}">Catalog is empty</span>
-    <table th:if="${catalog.size() > 0}" class="table table-hover">
+    <div th:replace="~{navigation :: navigation(Top_Five)}" />
+    <h1>Top five tickets</h1>
+    <span th:if="${fivePopularTicketsFromCatalog.size() == 0}">Top is empty</span>
+    <table th:if="${fivePopularTicketsFromCatalog.size() > 0}" class="table table-hover">
         <thead class="thead-dark">
         <tr>
             <td><b>ID</b></td>
             <td><b>Type</b></td>
             <td><b>Description</b></td>
-            <td><b>price</b></td>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="catalog : ${catalog}">
-            <td th:text="${catalog.id}"/>
-            <td th:text="${catalog.type}"/>
-            <td th:text="${catalog.description}"/>
-            <td th:text="${catalog.price}"/>
+        <tr th:each="topFive : ${fivePopularTicketsFromCatalog}">
+            <td th:text="${topFive.id}"/>
+            <td th:text="${topFive.type}"/>
+            <td th:text="${topFive.description}"/>
         </tr>
         </tbody>
     </table>
